# jarvis-assist-virtual

./: .gitignore  FUTURO_APP_MOBILE.md  INICIAR_INTERFACE.bat  INICIAR_JARVIS.bat  JARVIS.bat  PROJETO_JARVIS.md  README.md  START_JARVIS.bat
backend/: brain.py  config.py  logger.py  main.py  pc_control.py  requirements.txt  server.py  speech_to_text.py  text_to_speech.py  voice_auth.py  wake_word.py  wake_word_porcupine.py  wake_word_whisper.py
desktop/: package.json
desktop/src/: index.html  main.js  particles.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
